# aoc-2022

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
