[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Alexander Butz <alex.butz@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^2.20.0"
ipython = "^8.7.0"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^6.0.0"
mypy = "^0.991"
advent-of-code-data = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
